--- a/src/content/posts/cored20rpg/magic-changed-5e-spells.mdx
+++ b/src/content/posts/cored20rpg/magic-changed-5e-spells.mdx
@@ -1,10 +1,12 @@
 ---
 title: 'Заклинания пятой редакции измененные в Core d20 RPG'
 description: 'Заклинания пятой редакции измененные в Core d20 RPG #spells #e5e #cored20rpg #dnd5e'
-date: '2023-09-27'
+date: '2023-01-01'
 tags:
   - Core d20 RPG
   - Заклинания
+  - D&D 5e
+  - Измененные заклинания
 author: Антон "Palant" Палихов
 ---
 
@@ -17,6 +19,445 @@ author: Антон "Palant" Палихов
 3. Изменение или добавление сотворения заклинания за счет ячеек более высокого круга
 4. Незначительное изменение описания по сути
 5. Значительньное изменение описания по сути
+
+**25 измененных заклинаний**
+
+### <a name="_toc151740983"></a><a name="_toc158168995"></a><a name="_toc160586894"></a>Арканический меч
+*7-й круг, эвокация, Волшебник*
+
+**Время сотворения:** 1 бонусное действие
+
+**Дистанция:** 60 футов.
+
+**Компоненты:** В, С, М (миниатюрный платиновый меч с рукоятью и навершием из меди и цинка стоимостью 250 зм).
+
+**Длительность:** Концентрация, до 1 минуты.
+
+**Классы:** Волшебник
+
+Вы создаёте силовое поле в форме меча, которое парит в пределах дистанции. Оно существует, пока длится заклинание.
+
+Когда меч появляется, вы совершаете атаку заклинанием в ближнем бою по цели на ваш выбор в пределах 5 футов от меча. При попадании цель получает 7к10 урона силой. Пока длится заклинание, вы можете использовать бонусное действие в любой ваш ход, чтобы переместить меч на расстояние до 60 футов в точку, которую видите, и повторить атаку по той же или иной цели.
+### <a name="_toc151741009"></a><a name="_toc158169021"></a><a name="_toc160586895"></a>Быстрый колчан
+*5-й круг, трансмутация, Рейнджер, уникальное*
+
+**Время сотворения:** 1 бонусное действие
+
+**Дистанция:** на себя
+
+**Компоненты:** В, С, М (колчан, содержащий хотя бы одну единицу боеприпасов)
+
+**Длительность:** Концентрация, до 1 минуты
+
+**Классы:** Рейнджер
+
+Вы преобразовуете свой колчан для создания бесконечного запас немагических боеприпасов, которые, кажется, прыгают вам в руку, когда вы к ним тянетесь. Пока заклинание не закончилось, когда вы используете действие Атаковать на своем ходу для совершения дальнобойных атак оружием, использующим боеприпасы, вы можете бонусным действием совершить две дополнительные атаки одним и тем же оружием.
+
+Каждый раз, когда вы совершаете такую дальнобойную атаку, ваш колчан волшебным образом заменяет боеприпас, который вы использовали, на аналогичный немагический боеприпас. Любые части боеприпасов, созданные этим заклинанием, распадаются, когда заклинание заканчивается. Если вы больше не носите или не носите колчан, заклинание заканчивается.
+### <a name="_toc151741013"></a><a name="_toc158169025"></a><a name="_toc160586896"></a>Ведьмовской разряд
+*1-й круг, эвокация, Колдун*
+
+**Время сотворения:** 1 действие. 
+
+**Дистанция:** 30 футов.
+
+**Компоненты:** В, С, М (ветка дерева, в которое ударила молния).
+
+**Длительность:** Концентрация, до 1 минуты.
+
+Классы: Колдун
+
+Трескучий разряд синей энергии обрушивается на суще¬ство в пределах дистанции, создавая между вами и целью постоянную дугу-молнию. Совершите дальнобойную атаку заклинанием по этому существу. При попадании цель получает 1к12 урона молнией, а в начале каждого вашего последующего хода, пока длится заклинание, вы можете использовать действие или бонусное действие, чтобы автоматически нанести цели ещё 1к12 урона молнией. Заклинание прекращает действовать, если вы потратите действие на что-либо ещё.
+
+Заклинание также прекращается будет полностью укрыта от вас.
+
+**Используя более высокий круг:** Если вы сотворяете это заклинание, используя ячейку 2-го круга или выше, начальный урон увеличивается на 1к12 за каждый круг ячейки выше 1-го.
+### <a name="_toc151741060"></a><a name="_toc158169072"></a><a name="_toc160586897"></a>Дезинтеграция
+*6-й круг, трансмутация, волшебник*
+
+**Время сотворения:** 1 действие. 
+
+**Дистанция:** 60 футов.
+
+**Компоненты:** В, С, М (кусок магнетита и щепотка пыли). 
+
+**Длительность:** мгновенное.
+
+Классы: волшебник
+
+Тонкий зелёный луч срывается с вашего указательного пальца и поражает цель, которую вы видите в пределах дистанции. Целью может быть существо, объект или творение магической силы вроде стены, созданной заклинанием силовая стена.
+
+Существо, ставшее целью этого заклинания, должно совершить спасбросок Ловкости. При провале цель получает 10к8 + 40 силового урона, а при успешном спасброске половину этого урона Если этот урон оставляет цель с 0 хитов, она дезинтегрирована.
+
+Дезинтегрированное существо и всё, что оно носит или держит, кроме магических предметов, превраща¬ется в кучку мелкой серой пыли. Существо можно вер¬нуть к жизни только заклинаниями истинное воскрешение или желание.
+
+Заклинание автоматически дезинтегрирует любой немагический объект или творение магической силы, если они крупного размера или меньше. Если цель огромного размера или более, заклинание дезинте¬грирует только её часть объёмом с ю-футовый куб. На магические предметы заклинание не действует.
+
+**Используя более высокий круг:** Если вы сотворяете это заклинание, используя ячейку 7-го круга или выше, урон увеличива¬ется на 3к8 за каждый круг ячейки выше 6-го.
+### <a name="_toc151741069"></a><a name="_toc158169081"></a><a name="_toc160586898"></a>Дубовая кожа
+*2-й круг, трансмутация, друид, рейнджер*
+
+**Время сотворения:** 1 действие.
+
+**Дистанция:** касание.
+
+**Компоненты:** В, С, М (горсть дубовой коры). 
+
+**Длительность:** 1 час
+
+Классы: друид, рейнджер
+
+Прикоснитесь к согласному существу. Пока длится заклинание, его кожа будет выглядеть грубой, как кора, а КЗ цели не сможет стать ниже 16 вне зависимости от надетой брони.
+
+**Используя более высокий круг:** Если вы сотворяете это заклина¬ние, используя ячейку 3-го круга или выше, то КЗ цели увеличивается на 1 за каждый круг ячейки выше 2-ого.
+### <a name="_toc151741080"></a><a name="_toc158169092"></a><a name="_toc160586899"></a>Завеса стрел
+*2-й круг, трансмутация, рейнджер*
+
+**Время сотворения:** 1 действие
+
+**Дистанция:** 5 футов
+
+**Компоненты:** В, С, М (четыре или более стрелы или болта)
+
+**Длительность:** 8 часов
+
+Класс: рейнджер
+
+Вы втыкаете четыре стрелы или арбалетные болты в землю вокруг себя, сотворяя на них заклинание, чтобы защитить вас. Пока заклинание не закончится, каждый раз, когда существо первый перемещается в пределах 30 футов от от боеприпасов или оканчивает там ход, один из болтов или стрел взлетает, чтобы поразить его, а затем уничтожается. Существо должно совершить спасбросок Ловкости или получить 2к8 колющего урона. Когда не остается болтов или стрел, заклинание заканчивается.
+
+**Используя более высокий круг:** Когда вы сотворяете это заклинание, используя ячейку заклинаний 3-го круга или выше, количество болтов или стрел увеличивается на два за каждый круг после 2-го.
+### <a name="_toc151741082"></a><a name="_toc158169094"></a><a name="_toc160586900"></a>Заготовка
+*6-й круг, эвокация, волшебник*
+
+**Время сотворения:** ю минут. 
+
+**Дистанция:** на себя.
+
+**Компоненты:** В, С, М (изображающая вас статуэтка из слоновой кости, украшенная самоцветами, стоимостью не менее 1500 зм).
+
+**Длительность:** 10 дней.
+
+Классы: Волшебник
+
+Выберите заклинание не выше 5-го круга, которое вы можете сотворить на себя и со временем сотворения в 1 действие. Сотворите это заклинание — так называе¬мое заготовленное заклинание — как часть заклинания заготовка, потратив ячейки заклинаний на оба. Однако заготовленное заклинание не оказывает эффект, пока не наступят определённые условия. Опишите условия, творя эти заклинания. К примеру, дыхание под водой, сотворённое с заготовкой, может вступить в действие, когда вы окажетесь под водой или в иной жидкости.
+
+Заготовленное заклинание вступает в действие немедленно, как только впервые наступает указанное условие, хотите вы того или нет. После этого заготовка прекращается.
+
+Заготовленное заклинание оказывает эффект только на вас, даже если обычно действует и на других существ. Вы можете использовать только одно заклинание заго¬товка одновременно. Если сотворить это заклинание снова, эффект предыдущего заклинания заготовка прекращается. Также заготовка прекращается, если статуэтка-реагент более не при вас.
+
+**Используя более высокий круг:** При сотворении этого заклинания ячейкой 7-го и выше круга, круг заготовленного заклинания увеличивается на 1 за каждый круг ячейки выше 6-го.
+### <a name="_toc151741085"></a><a name="_toc158169097"></a><a name="_toc160586901"></a>Замедление
+*3-й круг, трансмутация, волшебник, чародей, бард*
+
+**Время сотворения:** 1 действие.
+
+**Дистанция:** 120 футов.
+
+**Компоненты:** В, С, М (капля патоки).
+
+**Длительность:** Концентрация, до 1 минуты.
+
+Классы: волшебник, чародей, бард
+
+Вы меняете ход времени для не более чем шести выбран¬ных вами существ в 40-футовом кубе в пределах дистан¬ции. Каждая цель должна совершить спасбросок Мудрости. При провале она попадает под влияние заклинания, пока оно длится.
+
+Скорость цели под влиянием заклинания снижается вдвое. Цель получает штраф -2 к КЗ и спасброскам Ловкости и не может совершать ответные действия. В свой ход она может использовать либо действие, либо бонусное действие, но не оба. Вне зависимости от спо¬собностей и магических предметов, существо не может совершить более одной атаки (дистанционной или ближнего боя) в свой ход.
+
+Если существо попытается сотворить заклинание, время сотворения которого составляет і действие, бросьте к20. Если выпало 11 или больше, заклинание не начнёт действовать до следующего хода существа, и существо должно потратить действие в следующий ход, чтобы завершить заклинание. Если оно не сможет этого сделать, заклинание потрачено зря.
+
+Существо, попавшее под влияние заклинания, снова проходит испытание Мудрости в конце каждого своего хода. При успехе заклинание прекращает дей¬ствовать на него.
+
+**Используя более высокий круг:** Если вы используете ячейку 4-ого круга или выше, то вы можете выбрать целью заклинания дополнительно одну цель за каждый круг ячейки выше 3-его.
+### <a name="_toc151741120"></a><a name="_toc158169132"></a><a name="_toc160586902"></a>Лечение ран
+*1-й круг, призывание (лечение), клерик, паладин, друид, рейнджер, бард*
+
+**Время сотворения:** 1 действие.
+
+**Дистанция:** касание.
+
+**Компоненты:** В, С
+
+**Длительность:** мгновенное.
+
+Классы: клерик, паладин, друид, рейнджер, бард
+
+Существо, которого вы коснулись, восстанавливает хитов в количестве 1к10 + модификатор вашей заклинательной характеристики. Заклинание не действует на нежить и конструкции.
+
+**Используя более высокий круг:** Если вы сотворяете это заклинание, используя ячейку 2-го круга или выше, исцеление увеличивается на 2к10 за каждый круг ячейки выше 1-го.
+### <a name="_toc151741121"></a><a name="_toc158169133"></a><a name="_toc160586903"></a>Лечащее слово
+*1-й круг, призывание (лечение), клерик, друид, бард*
+
+**Время сотворения:** 1 бонусное действие.
+
+**Дистанция:** 60 футов.
+
+**Компоненты:** С
+
+**Длительность:** мгновенное.
+
+Классы: клерик,  друид,  бард
+
+Выбранное вами существо, которое вы видите в преде¬лах дистанции, восстанавливает хитов в количестве 1к6 + модификатор вашей заклинательной характеристики. Заклинание не действует на нежить и конструкции.
+
+**Используя более высокий круг:** Если вы сотворяете это заклинание, используя ячейку 2-го круга или выше, исцеление увели¬чивается на 1к6 за каждый круг ячейки выше 1-го.
+### <a name="_toc151741123"></a><a name="_toc158169135"></a><a name="_toc160586904"></a>Каменная кожа
+*4-й круг, преграждение, волшебник, чародей*
+
+**Время сотворения:** 1 действие.
+
+**Дистанция:** касание.
+
+**Компоненты:** В, С, М (алмазная пыль стоимостью 100 зм, исчезает при сотворении).
+
+**Длительность:** до 1 часа.
+
+Классы: волшебник, чародей
+
+Заклинание делает плоть согласного существа, которого вы коснулись, твёрдой, словно камень. Пока длится заклинание, у цели устойчивость к немагическому дробящему, колющему и режущему урону. Также цель получает 25 временных хитов.
+### <a name="_toc151741125"></a><a name="_toc158169137"></a><a name="_toc160586905"></a>Касание вампира
+*3-й круг, некромантия, волшебник, колдун*
+
+**Время сотворения:** 1 действие. 
+
+**Дистанция:** на себя.
+
+**Компоненты:** В, С
+
+**Длительность:** Концентрация, до 1 минуты.
+
+Класс: волшебник, колдун
+
+Касание вашей руки, облечённой в тень, способно выса¬сывать жизненную силу из других, чтобы исцелять ваши раны. Совершите атаку заклинанием в ближнем бою по существу в пределах вашей зоны досягаемости. При попадании цель получает 3к8 некротического урона, а вы восстанавливаете хиты в количестве, равном половине нанесённого урона. Пока длится заклинание, можете Действием повторять эту атаку в любой ваш ход. Если вы обладаете особенностью Дополнительная атака вы можете совершать несколько атак заклинанием за одно действие.
+
+**Используя более высокий круг:** Если вы сотворяете это заклинание, используя ячейку 4-го круга или выше, урон увеличива¬ется на 1к8 за каждый круг ячейки выше 3-го.
+### <a name="_toc151741129"></a><a name="_toc158169141"></a><a name="_toc160586906"></a>Кислотная стрела
+*2-й круг, эвокация, волшебник, колдун*
+
+**Время сотворения:** 1 действие.
+
+**Дистанция:** 90 футов.
+
+**Компоненты:** В, С, М (толчёный лист ревеня и желудок гадюки).
+
+**Длительность:** мгновенное.
+
+Классы: волшебник, колдун
+
+Мерцающая зелёная стрела поражает цель в пределах дистанции и взрывается брызгами кислоты. Совершите дальнобойную атаку заклинанием по цели. При попа¬дании цель получит 6к4 урона кислотой немедленно и 3к4 урона кислотой в конце своего следующего хода. При промахе стрела обрызгивает цель кислотой на половину начального урона, а в конце следующего хода урона не будет
+
+**Используя более высокий круг:** Если вы сотворяете это заклина¬ние, используя ячейку 3-го круга или выше, урон (как начальный, так и последующий) увеличивается на 3к4 за каждый круг ячейки выше 2-го. 
+### <a name="_toc151741147"></a><a name="_toc158169159"></a><a name="_toc160586907"></a>Леденящее прикосновение
+Заговор, некромантия, волшебник, колдун, чародей
+
+**Время сотворения:** 1 действие
+
+**Дистанция:** Касание
+
+**Компоненты:** В, С
+
+**Длительность:** 1 раунд
+
+Классы: волшебник, колдун, чародей
+
+Совершите бросок атаки заклинанием в ближнем бою, чтобы коснуться существа и атаковать его жизненную силу холодом могилы. При попадании цель получает 1к8 некротического урона и не может восстановливать хиты до начала вашего следующего хода. Это заклинание не действует на нежить или конструкции. Также это заклинание не может остановить естественную регенерацию хитов. Если вы попали этой атакой по нежити, она также получает помеху к броскам атаки по вам до конца вашего следующего хода.
+
+Урон от заклинания увеличивается на 1к8, когда вы достигаете уровня заклинателя 5-го (2к8), 11-го (3к8), 17-го (4к8).
+### <a name="_toc151741163"></a><a name="_toc158169175"></a><a name="_toc160586908"></a>Магическое оружие
+*2-й круг, трансмутация, волшебник, колдун, клерик, чародей*
+
+**Время сотворения:** 1 действие
+
+**Дистанция:** Касание
+
+**Компоненты:** В, С
+
+**Длительность:** 2 часа
+
+Классы: волшебник, колдун, клерик, чародей
+
+Коснитесь оружия, которое не обладает бонусами к броскам атаки и урона. Пока заклинание не закончилось, это оружие становится магическим оружием с бонусом +1 к броскам атаки и броскам урона.
+
+**Используя более высокий круг:** Если вы сотворяете это заклинание, используя ячейку заклинаний 4-го круга или выше, бонус увеличивается до +2. Если вы используете ячейку заклинания 6-го круга или выше, бонус увеличивается до +3.
+### <a name="_toc151741170"></a><a name="_toc158169182"></a><a name="_toc160586909"></a>Массовое лечение ран
+*5-й круг, призывание (лечение), клерик, бард, друид*
+
+**Время сотворения:** 1 действие.
+
+**Дистанция:** 60 футов.
+
+**Компоненты:** В, С
+
+**Длительность:** мгновенное.
+
+Классы: клерик, бард, друид
+
+Волна исцеляющей энергии изливается из выбранной вами точки в пределах дистанции. Выберите не более шести существ в сфере радиусом 30 футов вокруг этой точки. Каждая цель восстанавливает хитов в количестве 3к10 + модификатор вашей заклинательной характеристики. Заклинание не действует на нежить и конструкции.
+
+**Используя более высокий круг:** Если вы сотворяете это заклинание, используя ячейку 6-го круга или выше, исцеление увели¬чивается на 2к10 за каждый круг ячейки выше 5-го.
+### <a name="_toc151741171"></a><a name="_toc158169183"></a><a name="_toc160586910"></a>Массовое лечащее слово
+*3-й круг, призывание (лечение), клерик, бард, друид*
+
+**Время сотворения:** 1 бонусное действие.
+
+**Дистанция:** бо футов.
+
+**Компоненты:** С.
+
+**Длительность:** мгновенное.
+
+Классы: клерик, бард, друид
+
+Вы произносите слова исцеления, и не более шести существ на ваш выбор, которых вы видите в пределах дистанции, восстанавливают хитов в количестве 3к6+ модификатор вашей заклинательной характеристики. Заклинание не действует на нежить и конструкции.
+
+**Используя более высокий круг:** Если вы сотворяете это заклинание, используя ячейку 4-го круга или выше, исцеление увели¬чивается на 1к6 за каждый круг ячейки выше 3-го.
+### <a name="_toc151741179"></a><a name="_toc158169191"></a><a name="_toc160586911"></a>Метка охотника
+*1-й круг, прорицание, рейнджер*
+
+**Время сотворения:** 1 бонусное действие. 
+
+**Дистанция:** 90 футов.
+
+**Компоненты:** С.
+
+**Длительность:** Концентрация, до 1 часа.
+
+Классы: рейнджер
+
+Вы выбираете существо, которое видите в пределах дистанции, и магически отмечаете его как свою добычу. Пока длится заклинание, вы наносите цели дополни¬тельно 1к6 урона каждый раз, когда попадаете по ней атакой оружием, и у вас преимущество к проверкам Восприятия и Выживания для поиска её. Если хитов цели снижаются до 0, прежде чем заклинание прекращает действовать, вы можете исполь¬зовать бонусное действие в свой следующий ход, чтобы отметить новое существо.
+
+**Используя более высокий круг:** Если вы сотворяете это заклинание, используя ячейку 3-го или 4-го круга, то длительность действия заклинания будет составлять 8 часов и не будет требоваться концентрация. Если использовать ячейку 5-го круга или выше длительность действия заклинания будет составлять 24 часа и не будет требоваться концентрация.
+### <a name="_toc151741216"></a><a name="_toc158169228"></a><a name="_toc160586912"></a>Огненный щит
+*4-й круг, эвокация, волшебник, колдун, чародей*
+
+**Время сотворения:** 1 бонусное действие.
+
+**Дистанция:** на себя.
+
+**Компоненты:** В, С, М (фосфор или светлячок).
+
+**Длительность:** 10 минут.
+
+Классы: волшебник, колдун, чародей
+
+Тонкие подвижные язычки пламени охватывают ваше тело, пока длится заклинание, испуская яркий свет в радиусе 10 футов и тусклый ещё на ю футов. Вы можете досрочно прекратить заклинание, потратив действие.
+
+Пламя даёт вам тёплый или морозный щит на ваш выбор. Тёплый щит даёт вам устойчивость к урону холо¬дом, а морозный — к урону огнём.
+
+Кроме того, когда существо в пределах 5 футов от вас попадает по вам атакой ближнего боя, щит извергает пламя. Атакующий получает 2к8 урона огнём от тёплого щита или 2к8 урона холодом от морозного.
+### <a name="_toc151741243"></a><a name="_toc158169255"></a><a name="_toc160586913"></a>Пламенный клинок
+*2-й круг, эвокация, друид*
+
+**Время сотворения:** 1 бонусное действие.
+
+**Дистанция:** на себя.
+
+**Компоненты:** В, С, М (лист сумаха).
+
+**Длительность:** 10 минут.
+
+Классы: друид
+
+Вы призываете в свою свободную руку пылающий клинок. Он похож по форме и размеру на скимитар и существует, пока длится заклинание. Если вы отпустите клинок, он исчезнет, но вы можете призвать его снова бонусным действием.
+
+Вы можете совершать атаки этим созданным пламенным клинком, используя атаку заклинанием в ближнем бою для определения попадания. При попадании цель получает 3к6 урона огнём.
+
+Огненный клинок испускает яркий свет в радиусе 10 футов и тусклый ещё на 10 футов.
+
+**Используя более высокий круг:** Если вы сотворяете это заклинание, используя ячейку 4-го круга или выше, урон увеличивается на 1к6 за каждые два круга ячейки выше 2-го. При использовании ячейки 4-го круга это заклинание игнорирует устойчивость к огню, а при использовании ячейки 6-го круга иммунитет цели к урону огнем снижает урон на 50%, а не на 100%.
+### <a name="_toc151741289"></a><a name="_toc158169301"></a><a name="_toc160586914"></a>Призыв заграждения [Conjure barrage]
+*3-й круг, воплощение, рейнджер*
+
+**Время сотворения:** 1 действие
+
+**Дистанция:** на себя (60-футовый конус).
+
+**Компоненты:** В, С, М (один боеприпас или метательное оружие)
+
+**Длительность:** Мгновенно
+
+Классы: рейнджер
+
+Вы бросаете оружие или стреляете в воздух, чтобы создать конус из одинакового оружия, которое обрушивается на ваших врагов. Каждое существо в 60-футовом конусе должно преуспеть в спасброске Ловкости или получить 4к8 урона (половину урона при успехе). Тип урона соответствует оружию или боеприпасу, используемых в качестве компонента.
+
+**Используя более высокий круг:** Когда вы сотворяете это заклинание, используя ячейку заклинаний 4-го уровня или выше, урон увеличивается на 2к8 за каждый уровень после 3-го.
+### <a name="_toc151741290"></a><a name="_toc158169302"></a><a name="_toc160586915"></a>Призыв залпа
+*5-й круг, воплощение, рейнджер*
+
+**Время сотворения:** 1 действие.
+
+**Дистанция:** 150 футов.
+
+**Компоненты:** В, С, М (один боеприпас или метательное оружие).
+
+**Длительность:** мгновенное.
+
+Классы: рейнджер
+
+Вы метаете немагическое оружие или стреляете немаги¬ческим боеприпасом в воздух и выбираете точку в пре¬делах дистанции. Сотни копий использованного вами боеприпаса или оружия обрушиваются залпом с небес, а затем исчезают. Каждое существо в цилиндре радиу¬сом 40 футов и высотой 20 футов с центром в выбранной точке должно совершить спасбросок Ловкости. Существо получает 8к8 урона при провале или половину этого урона при успехе. Тип урона тот же, что у использован¬ного оружия или боеприпаса.
+### <a name="_toc151741295"></a><a name="_toc158169307"></a><a name="_toc160586916"></a>Призыв скакуна
+*2-й круг, воплощение (ритуал), паладин, уникальное*
+
+**Время сотворения:** 10 минут
+
+**Дистанция:** 30 футов 
+
+**Компоненты:** В, С 
+
+**Длительность:** Постоянная
+
+Классы: паладин
+
+Вы вызываете дух, который принимает форму необычайно умного, сильного и верного скакуна, создавая с ним длительную связь. Скакун приходит в форме, которую вы выбираете, от боевого коня, пони, оленя или боевой собаки, которую ваш ГМ может разрешить призывать другим животным в качестве скакуна). Скакун имеет характеристики выбранной формы (небожитель, фея или исчадие на ваш выбор) вместо своего обычного типа. Кроме того, если ваш скакун имеет Интеллект 5 или меньше, его Интеллект становится равным 6, и он получает способность понимать один язык, на котором вы говорите.
+
+Ваш скакун служит вам ездовым животным как в бою, так и вне его, и у вас есть инстинктивная связь с вашим скакуном, которая позволяет вам сражаться как единое целое. Сидя верхом на своем скакуне, вы можете выбрать, чтобы любое заклинание, которое вы сотворяете, нацеленное только на вас, также воздействовало на вашего скакуна таким же образом.
+
+Когда хиты скакуна падают до 0, он исчезает, не оставляя физической формы. Вы также можете в любой момент действием отпустить своего скакуна, заставив его исчезнуть, и это не разорвет вашу связь с ним. Скакун не может снова появиться, пока вы снова не произнесете это заклинание, призывающее вашего связанного скакуна.
+
+Пока вы находитесь в пределах 1 мили от своего скакуна, вы можете общаться с ним телепатически.
+
+Вы можете освободить скакуна от его связи в любое время. Это прекращает эффект. Вы не можете иметь более одного скакуна, связанного этим заклинанием одновременно.
+
+**Используя более высокий круг:** Когда вы сотворяете это заклинание, используя ячейку заклинаний 4-го круга, вы можете привязать гиппогрифа, грифона или пегаса в качестве скакуна. Когда вы сотворяете это заклинание, используя ячейку заклинаний 5-го круга, вы можете привязать кошмара или единорога в качестве скакуна.
+### <a name="_toc151741389"></a><a name="_toc158169401"></a><a name="_toc160586917"></a>Стрела-молния
+*3-й круг, трансмутация, рейнджер*
+
+**Время сотворения:** 1 бонусное действие. 
+
+**Дистанция:** на себя.
+
+**Компоненты:** В, С
+
+**Длительность:** Концентрация, до 1 минуты.
+
+Класс: рейнджер
+
+В следующий раз, когда вы совершите дальнобойную атаку оружием, пока длится заклинание, боеприпас или само оружие, если оно метательное, превращается в разряд молнии. Совершите бросок атаки, как обычно. Вместо обычного урона от оружия цель получает 4к8 урона молнией при попадании или половину этого урона при промахе.
+
+Вне зависимости от попадания или промаха каждое существо в пределах 10 футов от цели должно совершить спасбросок Ловкости. Каждое из этих существ получает 2к8 урона молнией при провале или половину этого урона при успехе.
+
+Оружие или боеприпас после этого возвращаются в свою обычную форму.
+
+**Используя более высокий круг:** Если вы сотворяете это заклинание, используя ячейку 4-ГО круга или выше, урон от обоих эффектов заклинания увеличивается на 1к8 за каждый круг ячейки выше 3-го.
+### <a name="_toc151741424"></a><a name="_toc158169436"></a><a name="_toc160586918"></a>Ускорение
+*3-й круг, трансмутация*
+
+**Время сотворения:** 1 действие.
+
+**Дистанция:** 30 футов.
+
+**Компоненты:** В, С, М (стружка корня лакрицы). 
+
+**Длительность:** Концентрация, до 1 минуты.
+
+Выберите согласное существо, которое видите в преде¬лах дистанции. Пока длится заклинание, скорость цели удваивается, она получает бонус +2 к КБ, преимущество к спасброскам Ловкости и дополнительное действие в каждый свой ход. Это действие можно использовать только для совершения действий Атаковать (только 1 атака), Рывок, Отступление, Засада, Использование объекта или сотворение заговора
+
+Когда заклинание прекращает действовать, цель не может ни перемещаться, ни совершать действия до конца своего следующего хода — её охватывает слабость.
+
+---
+
+
+[CORE D20 RPG - Измененные заклинания 06032024.docx](https://1drv.ms/w/s!Atcrhwwo1lBA5J57m0FpTrlA8nMN3A?e=f1g5or)
+
 
 ---
 
