--- a/src/content/posts/cored20rpg/spells-new.mdx
+++ b/src/content/posts/cored20rpg/spells-new.mdx
@@ -7,3 +7,18 @@ tags:
   - Новые заклинания
   - Core d20 RPG
 ---
+
+Новые заклинания
+
+
+---
+
+Заклинания измененные
+
+Заклинания новые
+
+Заклинания альтернативные
+
+Описание заклинаний
+
+---
