--- a/src/content/posts/cored20rpg/magic-changed-5e-spells.mdx
+++ b/src/content/posts/cored20rpg/magic-changed-5e-spells.mdx
@@ -22,6 +22,60 @@ author: Антон "Palant" Палихов
 
 **25 измененных заклинаний**
 
+## Краткое описание изменений.
+
+**Арканический меч.** У этого заклинания был непозволительно маленький урон и сотворялся он действием. Скорость сотворения уменьшил до 1 бонусного действия, а урон повысил до 7к10. Теперь он достойно смотрится на фоне Духовного оружия.
+
+**Быстрый колчан.** Две дополнительные атаки за бонусное действие это конечно хорошо, но не очень. Теперь это заклинание создает боеприпасы, которые считаются магическими. Также заклинание сделано уникальным для рейнджера.
+
+**Ведьмовской разряд.** Его основная проблема была в том, что цель могла легко разорвать расстояние. Поэтому теперь выход цели за предел 30 футов не прекращает действие заклинания.
+
+**Дезинтеграция.** Основной проблемой этого заклинания было нулевой урон при успешном спасброске. Теперь даже при успешном спасброске цель все равно получит половину урона. Также повысил урон за счет изменения костей с к6 на к8.
+
+**Дубовая кожа.** У этого заклинания была убрана концентрация и добавлена возможность улучшить его за счет использования ячеек высоких кругов, что дает дополнительный класс защиты.
+
+**Завеса стрел.** У всех заклинаний рейнджера была проблема с уроном. Повышен урон.
+
+**Заготовка.** Добавлена возможность использования ячеек более высоких кругов, что позволяет использовать также заклинания более высоких кругов.
+
+**Замедление.** Добавлена возможность использования ячеек более высоких кругов, что добавляет новые цели.
+
+**Лечение ран.** Увеличена эффективность заклинания за счет повышения базовой кости с 1к8 до 1к10 и рост лечения при использовании ячеек более высоких кругов.
+
+**Лечащее слово.** Увеличена эффективность заклинания за счет повышения базовой кости с 1к4 до 1к6 и рост лечения при использовании ячеек более высоких кругов.
+
+**Каменная кожа.** У этого заклинания была убрана концентрация и добавлены временные хиты.
+
+**Касание вампира.** Увеличен урон и дана возможность использовать несколько атак в раунд. 
+
+**Кислотная стрела.** Увеличен базовый и дополнительный урон.
+
+**Леденящее прикосновение.** Заклинание переделано в заклинание ближнего боя и теперь оно не останавливает регенерацию.
+
+**Магическое оружие.** Убрана концентрация и заклинание можно сотворить на магическое оружие без бонусов к броскам атаки и урону.
+
+**Массовое лечение ран.** Увеличена эффективность заклинания за счет повышения базовой кости с 1к8 до 1к10 и рост лечения при использовании ячеек более высоких кругов.
+
+**Массовое лечащее слово** Увеличена эффективность заклинания за счет повышения базовой кости с 1к4 до 1к6 и рост лечения при использовании ячеек более высоких кругов.
+
+**Метка охотника.** Добавлена возможность использования ячеек более высоких кругов, что продлевает длительность заклинания и убирает концентрацию.
+
+**Огненный щит.** Убрана концентрация и скорость сотворения уменьшена до 1 бонусного действия.
+
+**Пламенный клинок.** Убрана концентрация, повышен урон и дана возможность использовать несколько атак в ход.
+
+**Призыв заграждения [Conjure barrage].** Увеличен урон.
+
+**Призыв залпа.** Увеличен урон.
+
+**Призыв скакуна.** Добавлена возможность при использовании ячейки более высокого круга призвать более мощного скакуна. Также заклинание сделано уникальным для паладина.
+
+**Стрела-молния.** Увеличен базовый и дополнительный урон.
+
+**Ускорение.** Добавлена возможность за дополнительное действие сотворить заговор.
+
+## Описания заклинаний
+
 ### <a name="_toc151740983"></a><a name="_toc158168995"></a><a name="_toc160586894"></a>Арканический меч
 *7-й круг, эвокация, Волшебник*
 
