--- a/src/content/posts/cored20rpg/magic-new-spells.mdx
+++ b/src/content/posts/cored20rpg/magic-new-spells.mdx
@@ -12,7 +12,9 @@ author: Антон "Palant" Палихов
 
 **Дата обновления:** 06.03.2024
 
-42 новых заклинания
+42 новых заклинания - в осном добавлены заклинания для клерика поддержки или боевого клерика, волшебника, барда.
+
+## Описание заклинаний
 
 ### <a name="_toc151740999"></a><a name="_toc158169011"></a><a name="_toc151740998"></a><a name="_toc158169010"></a><a name="_toc160586925"></a>Боевой гимн 
 *4-й круг, очарование, бард*
