--- a/src/content/posts/cored20rpg/magic-changed-5e-spells.mdx
+++ b/src/content/posts/cored20rpg/magic-changed-5e-spells.mdx
@@ -519,7 +519,7 @@ author: Антон "Palant" Палихов
 
 [Заклинания пятой редакции измененные в CORE D20 RPG](https://cyborgsandmages.com/posts/cored20rpg/magic-changed-5e-spells)
 
-[Заклинания альтернативные для пятой редакции в CORE D20 RPG](https://cyborgsandmages.com/posts/cored20rpg/magic-new-spells)
+[Новые заклинаная  в CORE D20 RPG](https://cyborgsandmages.com/posts/cored20rpg/magic-new-spells)
 
 [Заклинания альтернативные для пятой редакции в CORE D20 RPG](https://cyborgsandmages.com/posts/cored20rpg/magic-alternative-5e-spells)
 
