--- a/src/content/singles/index-2.mdx
+++ b/src/content/singles/index-2.mdx
@@ -3,7 +3,7 @@ title: Тематические индексы
 description: Тематические индексы
 ---
 
-[Вождение городских кампаний](https://cyborgsandmages.com/posts/articles/index-сity-campaigns)
+[Вождение городских кампаний](https://cyborgsandmages.com/tags/%D0%B3%D0%BE%D1%80%D0%BE%D0%B4)
 
 [Тактика существ и столкновения с ними](https://cyborgsandmages.com/posts/articles/bestiary-tactics-index)
 
