--- a/src/content/singles/home.mdx
+++ b/src/content/singles/home.mdx
@@ -6,7 +6,7 @@ links:
     href: https://monstermaker.cyborgsandmages.com/
 ---
 
-[ПРО НАС](https://cyborgsandmages.com/about-us) | [СВЯЗАТЬСЯ С НАМИ](https://cyborgsandmages.com/contact-us) | [Поддержать проект](https://cyborgsandmages.com/support-us) | [Страницы сайта](https://cyborgsandmages.com/index-1)
+[Про нас](https://cyborgsandmages.com/about-us) | [Связаться с нами](https://cyborgsandmages.com/contact-us) | [Поддержать проект](https://cyborgsandmages.com/support-us) | [Страницы сайта](https://cyborgsandmages.com/index-1)
 
 ![](~assets/branding/banner.jpg)
 
@@ -16,17 +16,21 @@ links:
 
 ### Размещение полезных переводов и ресурсов на сайте
 
-Переводы размещаются в категории [Переводы](https://cyborgsandmages.com/translations/1)
+Переводы статей англоязычных авторов размещаются в категории [Переводы](https://cyborgsandmages.com/translations/1)
 
 ### Переводы англоязычных материалов
 
-Сейчас мы переводим несколько книг англоязычных авторов, продолжаем работу над [переводом SRD 5.1](https://srd.dnd-5e.org/) 
+Сейчас мы переводим несколько книг англоязычных авторов, продолжаем работу над [переводом SRD 5.1](https://srd.dnd-5e.org/)
+
+Все еще не закончили перевод Кортни Кемпбелла "Простой и домен"
+
+Недавно закончили перевод [Ресурсного документа Ленивого Мастера](https://cyborgsandmages.com/lazydm-resource-document-ru)
 
 ### Онлайн инструмент для создания статблоков существ
 
 [Создатель чудовищ](https://monstermaker.cyborgsandmages.com/)
 
-### Создание улучшенной версии пятой редакции - Core d0 RPG
+### Создание улучшенной версии пятой редакции - Core d20 RPG
 
 <Aside>
 
