--- a/src/content/posts/cored20rpg/weaponproperties.mdx
+++ b/src/content/posts/cored20rpg/weaponproperties.mdx
@@ -80,6 +80,7 @@ author: Антон "Palant" Палихов
 **Опасное.** При критическом попадании это оружие наносит дополнительную кость урона.
 
 **Особое.** Оружие со свойством «особое» используется по специальным правилам, указанным в описании этого оружия (смотрите ниже «Особое оружие»).
+
 **Отражение.** Используя бонусное действие вы готовитесь отражать атаки оружием вашего размера или меньше в ближнем и дальнем бою. При попадании по вам вы используете ваш Базовый КС оружейных приемов вместо вашего КЗ. Если результат броска атаки выше вашего КЗ но ниже КС оружейных приемов, то атака попадает по оружию, которое получает половину урона.
 
 **Очень** **длинное**. Это оружие добавляет 10 футов к расстоянию, на котором вы можете совершать этим оружием атаки, а также провоцированные атаки.
@@ -112,7 +113,7 @@ author: Антон "Palant" Палихов
 
 **Статус.** Статусное оружие накладывает дополнительные эффекты при сильных ударах. Когда бросок атаки оружием со свойством статус превышает КЗ цели на 5 или более, оно накладывает дополнительный статусный эффект в зависимости от типа нанесенного урона. Критическое попадание гарантирует статусный эффект. Рубящее оружие наносит зияющие раны и обильное кровотечение, нанося дополнительный рубящий урон, равный вашему бонусу владения. Предметы, конструкты и Элементали могут быть невосприимчивы к этому урону, как и другие существа, которые не кровоточат, на усмотрение вашего ГМ. Дробящее оружие наносит ошеломляющие удары, которые ошеломляют цель. Нанесение этого статуса приводит к тому, что следующий бросок атаки цели будет сделан с помехой. Колющее оружие награждает точными или фокусными атаками, пробивая бреши в защите и оставляя цель уязвимой. Колющее оружие дает преимущество при первой атаке оружием против цели до начала ее следующего хода. 
 
-Тяжёлое. Существа, размер которых меньше среднего совершают броски атаки тяжёлым оружием с помехой. Из-за размера и веса такие существа не могут использовать такое оружие эффективно.
+**Тяжёлое.** Существа, размер которых меньше среднего совершают броски атаки тяжёлым оружием с помехой. Из-за размера и веса такие существа не могут использовать такое оружие эффективно.
 
 **Универсальное.** Это оружие можно использовать как одной, так и двумя руками. Урон, указанный в скобках после этого свойства, означает урон при совершении атаки ближнего при хвате двумя руками.
 
