--- a/src/content/posts/cored20rpg/weapons.mdx
+++ b/src/content/posts/cored20rpg/weapons.mdx
@@ -329,7 +329,7 @@ author: Антон "Palant" Палихов
 
 ---
 
-Свойства оружия
+[Свойства оружия](https://cyborgsandmages.com/cored20rpg/weaponproperties)
 
 ---
 
